--- a/runnerz/src/main/resources/application.properties
+++ b/runnerz/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=runnerz
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=runnerz
+
+
+logging.level.org.springframework.jdbc=INFO
+
